--- a/calendar.html
+++ b/calendar.html
@@ -32,7 +32,7 @@
     #vehicle-schedule-heading {
       position: absolute; top: 10px; left: 0; width: 100%; text-align: center;
       font-size: 2rem; font-weight: bold; pointer-events: none; z-index: 10;
-      color: #333; margin: 0;
+      color: #333; margin: 0 0 1rem 0;
     }
     #calendar { margin-top: 2rem; }
     /* Form layout */
