--- a/calendar.html
+++ b/calendar.html
@@ -30,7 +30,7 @@
     }
     .calendar-container { position: relative; }
     #vehicle-schedule-heading {
-      position: absolute; top: 10px; left: 0; width: 100%; text-align: center;
+      width: 100%; text-align: center;
       font-size: 2rem; font-weight: bold; pointer-events: none; z-index: 10;
       color: #333; margin: 0 0 1rem 0;
     }
