--- a/calendar.html
+++ b/calendar.html
@@ -28,7 +28,7 @@
     select, input[type="date"], input[type="time"] {
       font-size: 1rem; padding: 0.3rem; margin: 0.3rem 0;
     }
-    .calendar-container { position: relative; }
+    .calendar-container { position: relative; padding=top: 5rem; }
     #vehicle-schedule-heading {
       width: 100%; text-align: center;
       font-size: 2rem; font-weight: bold; pointer-events: none; z-index: 10;
