--- a/calendar.html
+++ b/calendar.html
@@ -28,11 +28,19 @@
     select, input[type="date"], input[type="time"] {
       font-size: 1rem; padding: 0.3rem; margin: 0.3rem 0;
     }
-    .calendar-container { position: relative; padding=top: 5rem; }
+    .calendar-container {
+      /* position: relative; */
+      /* padding-top: 5rem; */ /* Removed the extra top-padding */
+    }
     #vehicle-schedule-heading {
-      width: 100%; text-align: center;
-      font-size: 2rem; font-weight: bold; pointer-events: none; z-index: 10;
-      color: #333; margin: 0 0 1rem 0;
+      /* Remove absolute positioning */
+      /* position: absolute; top: 10px; left: 0; */
+      width: 100%;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+      color: #333;
+      margin: 0 0 1rem 0; /* Keeps some spacing under the heading */
     }
     #calendar { margin-top: 2rem; }
     /* Form layout */
