--- a/calendar.html
+++ b/calendar.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet">
 
   <style>
+    /* BASIC PAGE STYLES */
     body {
       margin: 0; padding: 0;
       font-family: sans-serif;
@@ -28,58 +29,13 @@
       border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h2 { margin-top: 0; }
+
     .vehicle-select-container { margin-bottom: 1rem; }
     select, input[type="date"], input[type="time"] {
       font-size: 1rem; padding: 0.3rem; margin: 0.3rem 0;
     }
 
-    /* NEW LAYOUT / SIDEBAR */
-    .calendar-and-details {
-      display: flex; /* put calendar on the left, details on the right */
-      gap: 1rem;
-    }
-    .calendar-section {
-      flex: 1; /* grow to fill space */
-      min-width: 0; /* needed so calendar can shrink if needed */
-    }
-    .details-section {
-      flex: 0 0 300px; /* fixed width sidebar */
-      border-left: 1px solid #ccc;
-      padding-left: 1rem;
-    }
-
-    #vehicle-schedule-heading {
-      width: 100%;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      color: #333;
-      margin: 0 0 1rem 0; /* spacing below heading */
-    }
-    #calendar {
-      margin-top: 2rem;
-    }
-
-    /* Make the date panel stand out */
-    #selected-date-info {
-      margin-top: 1rem;
-      padding: 1rem;
-      border-radius: 6px;
-      background: #fafafa;
-    }
-    #selected-date-info h3 {
-      font-size: 1.25rem;
-      margin: 0 0 0.5rem;
-    }
-    #date-bookings-list {
-      font-size: 1rem;
-      line-height: 1.4;
-    }
-    #date-bookings-list div {
-      margin-bottom: 0.75rem; /* spacing between booking lines */
-    }
-
-    /* Booking form layout */
+    /* FORM LAYOUT */
     #booking-form {
       display: flex; flex-wrap: wrap; gap: 1rem;
       margin-bottom: 1rem; align-items: center;
@@ -90,6 +46,69 @@
     }
     #signOutBtn, #returnVehicleBtn {
       margin-bottom: 1rem; margin-right: 1rem;
+    }
+
+    /* CALENDAR + DETAILS LAYOUT 
+       By default, stacked (block). We use a media query 
+       to do side-by-side on wider screens. */
+    .calendar-and-details {
+      display: block; /* default stacked layout on narrow screens */
+    }
+    @media (min-width: 800px) {
+      .calendar-and-details {
+        display: flex; /* side by side on wider screens */
+        flex-wrap: nowrap; /* prevent wrapping so the sidebar stays to the right */
+        gap: 1rem;
+      }
+    }
+
+    /* CALENDAR SECTION */
+    .calendar-section {
+      flex: 1; /* fill remaining space on wide screens */
+      min-width: 0; /* allow flex to shrink if necessary */
+    }
+    #vehicle-schedule-heading {
+      width: 100%;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+      color: #333;
+      margin: 0 0 1rem 0;
+    }
+    #calendar {
+      margin-top: 2rem;
+    }
+
+    /* SIDEBAR DETAILS SECTION */
+    .details-section {
+      /* On wide screens, it becomes a sidebar. On narrow, it appears below. */
+      flex: 0 0 300px; /* fixed width on wide screens */
+      border-left: 1px solid #ccc;
+      padding-left: 1rem;
+      margin-top: 1rem;
+    }
+    @media (min-width: 800px) {
+      .details-section {
+        margin-top: 0; /* remove extra top margin on wide screens */
+      }
+    }
+
+    /* SELECTED DATE INFO STYLES */
+    #selected-date-info {
+      background: #fafafa;
+      border-radius: 6px;
+      padding: 1rem;
+    }
+    #selected-date-info h3 {
+      font-size: 1.25rem;
+      margin: 0 0 0.5rem;
+    }
+    #date-bookings-list {
+      font-size: 1rem;
+      line-height: 1.4;
+    }
+    #date-bookings-list div {
+      margin-bottom: 0.75rem;
     }
   </style>
 </head>
@@ -111,7 +130,7 @@
       <option value="Vehicle1">Vehicle1</option>
       <option value="Vehicle2">Vehicle2</option>
       <option value="Vehicle3">Vehicle3</option>
-      <!-- ... up to Vehicle20 -->
+      <!-- up to Vehicle20, etc. -->
     </select>
   </div>
 
@@ -139,7 +158,7 @@
     <button id="returnVehicleBtn">Return Vehicle Now</button>
   </div>
 
-  <!-- NEW LAYOUT WRAPPER -->
+  <!-- CALENDAR + DETAILS WRAPPER -->
   <div class="calendar-and-details">
     <!-- LEFT: CALENDAR -->
     <div class="calendar-section">
@@ -147,7 +166,7 @@
       <div id="calendar"></div>
     </div>
 
-    <!-- RIGHT: SELECTED DATE INFO -->
+    <!-- RIGHT: SELECTED DATE INFO SIDEBAR -->
     <div class="details-section">
       <div id="selected-date-info">
         <h3>Selected Date: <span id="selected-date-text"></span></h3>
@@ -168,7 +187,7 @@
   import { getDatabase, ref, get, push, set, update }
     from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-  // Your Firebase config
+  // Firebase config
   const firebaseConfig = {
   apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
   authDomain: "yfned-fleet-nfc.firebaseapp.com",
@@ -202,13 +221,11 @@
   const selectedDateTextEl = document.getElementById('selected-date-text');
   const dateBookingsListEl = document.getElementById('date-bookings-list');
 
-  let lastClickedDayEl = null; // for highlighting the clicked cell
+  let lastClickedDayEl = null; // used to unhighlight the previously clicked day cell
 
-  // If user came via an NFC link, e.g. ?nfcVehicle=Vehicle3
   const urlParams = new URLSearchParams(window.location.search);
-  const nfcVehicle = urlParams.get('nfcVehicle');
+  const nfcVehicle = urlParams.get('nfcVehicle'); // e.g. ?nfcVehicle=Vehicle3
 
-  // Update heading function
   async function updateVehicleHeading(vehicleName) {
     if (!vehicleName) return;
     const vehicleRef = ref(db, 'vehicles/' + vehicleName);
@@ -262,7 +279,7 @@
         await handleReturnVehicle();
       });
 
-      // If NFC param
+      // NFC param => handle automatically
       if(nfcVehicle) {
         handleNfcFlow(nfcVehicle);
       }
@@ -277,6 +294,7 @@
     const calendarEl = document.getElementById('calendar');
     calendar = new FullCalendar.Calendar(calendarEl, {
       initialView: 'dayGridMonth',
+      timeZone: 'local', // ensure local time
       events: fetchVehicleBookings,
       dateClick: (info) => {
         // Unhighlight old day
@@ -322,7 +340,8 @@
       const events = Object.keys(data).map(bookingId => {
         const b = data[bookingId];
         return {
-          title: `${b.startTime} Booked by: ${b.userName || "Unknown"}`,  // if you prefer "8a Booked by..."
+          // e.g. "12:00 Booked by: jake.carr@..."
+          title: `${b.startTime} Booked by: ${b.userName || "Unknown"}`,
           start: b.startTimeISO,
           end: b.endTimeISO
         };
@@ -352,7 +371,7 @@
 
     eventsForDay.forEach(ev => {
       const item = document.createElement('div');
-      // e.g. "8:00 AM Booked by jake@domain" 
+      // e.g. "12:00 Booked by: user | Start: localTime ... End: localTime..."
       const startStr = ev.start.toLocaleString();
       const endStr = ev.end.toLocaleString();
       item.textContent = `${ev.title} | Start: ${startStr} | End: ${endStr}`;
