--- a/calendar.html
+++ b/calendar.html
@@ -189,7 +189,7 @@
 
   // Firebase config
   const firebaseConfig = {
-    apiKey: "AIzaSyA...",
+    apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
     authDomain: "yfned-fleet-nfc.firebaseapp.com",
     databaseURL: "https://yfned-fleet-nfc-default-rtdb.firebaseio.com",
     projectId: "yfned-fleet-nfc",
@@ -217,50 +217,35 @@
   const signOutBtn = document.getElementById('signOutBtn');
   const returnVehicleBtn = document.getElementById('returnVehicleBtn');
 
+  // Elements for the date detail panel
   const selectedDateTextEl = document.getElementById('selected-date-text');
   const dateBookingsListEl = document.getElementById('date-bookings-list');
 
-  let lastClickedDayEl = null;
+  let lastClickedDayEl = null; // used to unhighlight the previously clicked day cell
 
-  // If user came via an NFC link, e.g. ?nfcVehicle=Vehicle3
+  // NFC query param
   const urlParams = new URLSearchParams(window.location.search);
   const nfcVehicle = urlParams.get('nfcVehicle');
 
-  // NEW: utility to check if new booking overlaps existing
-  async function isBookingOverlapping(vehicleName, newStartTS, newEndTS) {
-    const snap = await get(ref(db, 'bookings/' + vehicleName));
-    if(!snap.exists()) return false; // no bookings => no overlap
-
-    const allBookings = snap.val();
-    // overlap if newStart < existingEnd && newEnd > existingStart
-    for(const bId in allBookings) {
-      const b = allBookings[bId];
-      const existingStart = toTimestamp(b.date, b.startTime);
-      const existingEnd   = toTimestamp(b.date, b.endTime);
-
-      if(newStartTS < existingEnd && newEndTS > existingStart) {
-        return true;
-      }
-    }
-    return false;
-  }
-
-  // Update heading with vehicle status
+  // Update heading based on vehicle data in /vehicles
   async function updateVehicleHeading(vehicleName) {
     if (!vehicleName) return;
-    const snap = await get(ref(db, 'vehicles/' + vehicleName));
+    const vehicleRef = ref(db, 'vehicles/' + vehicleName);
+    const snap = await get(vehicleRef);
+
     if (snap.exists()) {
       const vehData = snap.val();
       if (vehData.status === 'signedOut') {
-        vehicleHeading.innerHTML = `${vehicleName} schedule:<br>Currently Signed Out by: ${vehData.CurrentlySignedOutBy}`;
+        vehicleHeading.innerHTML = ${vehicleName} schedule:<br>Currently Signed Out by: ${vehData.CurrentlySignedOutBy};
       } else {
-        vehicleHeading.textContent = `${vehicleName} schedule: Available`;
+        vehicleHeading.textContent = ${vehicleName} schedule: Available;
       }
     } else {
-      vehicleHeading.textContent = `${vehicleName} schedule: Available`;
+      vehicleHeading.textContent = ${vehicleName} schedule: Available;
     }
   }
 
+  // On auth state
   onAuthStateChanged(auth, (user) => {
     if(!user) {
       window.location.href = 'index.html';
@@ -272,68 +257,83 @@
       initCalendar();
 
       vehicleSelect.addEventListener('change', async () => {
-        await updateVehicleHeading(vehicleSelect.value);
+        const selectedVehicle = vehicleSelect.value;
+        await updateVehicleHeading(selectedVehicle);
         calendar.refetchEvents();
       });
 
+      // Default heading on load
       updateVehicleHeading(vehicleSelect.value);
 
+      // Book
       bookVehicleBtn.addEventListener('click', async (e) => {
         e.preventDefault();
         await handleBooking();
       });
 
+      // Sign out
       signOutBtn.addEventListener('click', async () => {
         await handleSignOutVehicle();
       });
 
+      // Return
       returnVehicleBtn.addEventListener('click', async () => {
         await handleReturnVehicle();
       });
 
+      // If we have ?nfcVehicle=...
       if(nfcVehicle) {
         handleNfcFlow(nfcVehicle);
       }
     }
   });
 
+  // Logout
   logoutBtn.addEventListener('click', async () => {
     await signOut(auth);
   });
 
+  // Initialize FullCalendar
   function initCalendar() {
     const calendarEl = document.getElementById('calendar');
     calendar = new FullCalendar.Calendar(calendarEl, {
       initialView: 'dayGridMonth',
-      timeZone: 'local',
+      timeZone: 'local', // interpret events in local time
       events: fetchVehicleBookings,
       dateClick: (info) => {
+        // Unhighlight old day
         if (lastClickedDayEl) {
           lastClickedDayEl.style.backgroundColor = '';
         }
+        // Highlight new
         info.dayEl.style.backgroundColor = 'lightblue';
         lastClickedDayEl = info.dayEl;
 
+        // Show date in the sidebar
         selectedDateTextEl.textContent = info.dateStr;
 
+        // DAY-BASED approach => get events that overlap the entire day
         const eventsForDay = getEventsForDate(info.date);
         displayBookingsForDay(eventsForDay, info.dateStr);
 
+        // Auto-fill booking form
         bookingDateInput.value = info.dateStr;
       }
     });
+
     calendar.render();
   }
 
+  // Fetch events from /bookings/{vehicleName}
   async function fetchVehicleBookings(info, successCallback, failureCallback) {
     try {
-      const vehicleName = vehicleSelect.value;
-      if(!vehicleName) {
+      const selectedVehicle = vehicleSelect.value;
+      if(!selectedVehicle) {
         successCallback([]);
         return;
       }
 
-      const snap = await get(ref(db, 'bookings/' + vehicleName));
+      const snap = await get(ref(db, 'bookings/' + selectedVehicle));
       if(!snap.exists()) {
         successCallback([]);
         return;
@@ -343,12 +343,15 @@
       const events = Object.keys(data).map(bookingId => {
         const b = data[bookingId];
         return {
+          // We'll store the push key as "id" so we know how to remove it
           id: bookingId,
-          title: `${b.startTime} Booked by: ${b.userName || "Unknown"}`,
+          // e.g. "06:00 Booked by: user"
+          title: ${b.startTime} Booked by: ${b.userName || "Unknown"},
           start: b.startTimeISO,
           end: b.endTimeISO,
+          // We'll keep track of the booking creator email in extendedProps
           extendedProps: {
-            creatorEmail: b.userName
+            creatorEmail: b.userName // or rename it to b.ownerEmail if you prefer
           }
         };
       });
@@ -359,108 +362,103 @@
     }
   }
 
+  // DAY-BASED approach: match events if they overlap the 24h block of clickedDate
   function getEventsForDate(clickedDate) {
     const dayStart = new Date(clickedDate);
-    dayStart.setHours(0, 0, 0, 0);
+    dayStart.setHours(0, 0, 0, 0); 
     const dayEnd = new Date(dayStart);
-    dayEnd.setDate(dayEnd.getDate() + 1);
+    dayEnd.setDate(dayEnd.getDate() + 1); // next midnight
 
     const allEvents = calendar.getEvents();
-    return allEvents.filter(ev => ev.start < dayEnd && ev.end > dayStart);
+    return allEvents.filter(ev => {
+      // event must overlap [dayStart, dayEnd)
+      return ev.start < dayEnd && ev.end > dayStart;
+    });
   }
 
+  // Display events in sidebar (with a "Remove" button if user is the owner)
   function displayBookingsForDay(eventsForDay, dateStr) {
     dateBookingsListEl.innerHTML = '';
+
     if (eventsForDay.length === 0) {
       dateBookingsListEl.textContent = 'No bookings on ' + dateStr + '.';
       return;
     }
+
     eventsForDay.forEach(ev => {
-      const div = document.createElement('div');
+      const item = document.createElement('div');
       const startStr = ev.start.toLocaleString();
       const endStr = ev.end.toLocaleString();
-      div.textContent = `${ev.title} | Start: ${startStr} | End: ${endStr}`;
 
-      // remove button if user is the creator
+      // We'll show the basic text
+      item.textContent = ${ev.title} | Start: ${startStr} | End: ${endStr};
+
+      // Now let's add a "Remove" button. Only show it if current user is the booking's creator
       const creator = (ev.extendedProps.creatorEmail || '').toLowerCase();
-      if(creator === currentUser.email.toLowerCase()) {
+      const me = currentUser.email.toLowerCase();
+
+      if (creator === me) {
         const removeBtn = document.createElement('button');
         removeBtn.textContent = 'Remove';
         removeBtn.style.marginLeft = '1rem';
         removeBtn.onclick = async () => {
-          if(confirm('Delete this booking?')) {
+          if (confirm('Are you sure you want to delete this booking?')) {
             await removeBooking(ev.id);
           }
         };
-        div.appendChild(removeBtn);
+        item.appendChild(removeBtn);
       }
-      dateBookingsListEl.appendChild(div);
+
+      dateBookingsListEl.appendChild(item);
     });
   }
 
+  // removeBooking(...) actually deletes the booking from DB, then refetches
   async function removeBooking(bookingId) {
     try {
       const vehicleName = vehicleSelect.value;
-      await remove(ref(db, `bookings/${vehicleName}/${bookingId}`));
+      const bookingRef = ref(db, bookings/${vehicleName}/${bookingId});
+      await remove(bookingRef);
       alert('Booking removed successfully!');
+
+      // Force the calendar to reload events
       calendar.refetchEvents();
-    } catch(err) {
+      // If you also want to refresh the day panel for the last clicked date, 
+      // you'd just re-run "displayBookingsForDay" with the same date
+      // but it's simpler just to click the day again.
+    } catch (err) {
       console.error(err);
       alert('Error removing booking: ' + err);
     }
   }
 
+  // Convert date/time to timestamp
   function toTimestamp(dateStr, timeStr) {
-    return new Date(dateStr + 'T' + timeStr).getTime();
+    return new Date(${dateStr}T${timeStr}).getTime();
   }
 
-  // NEW: handleBooking with overlap check + signOut check
+  // handleBooking(...)
   async function handleBooking() {
-    const vehicleName = vehicleSelect.value;
-    if(!vehicleName) {
+    const selectedVehicle = vehicleSelect.value;
+    if(!selectedVehicle) {
       alert('No vehicle selected for booking.');
       return;
     }
 
     const dateVal = bookingDateInput.value;
     const startVal = bookingStartInput.value;
-    const endVal   = bookingEndInput.value;
+    const endVal = bookingEndInput.value;
     if(!dateVal || !startVal || !endVal) {
       alert('Please provide date, start time, and end time.');
       return;
     }
 
-    const startTS = toTimestamp(dateVal, startVal);
-    const endTS   = toTimestamp(dateVal, endVal);
-    if(endTS <= startTS) {
-      alert('End time must be after start time!');
-      return;
-    }
-
-    // 1) Check overlap
-    const overlap = await isBookingOverlapping(vehicleName, startTS, endTS);
-    if(overlap) {
-      alert('That time range is already booked!');
-      return;
-    }
-
-    // 2) Also check if vehicle is currently signed out by someone else
-    const vehSnap = await get(ref(db, 'vehicles/' + vehicleName));
-    if(vehSnap.exists()) {
-      const vData = vehSnap.val();
-      if(vData.status === 'signedOut' && vData.CurrentlySignedOutBy !== currentUser.email) {
-        alert(`Vehicle is currently signed out by ${vData.CurrentlySignedOutBy}. Cannot book!`);
-        return;
-      }
-    }
-
-    // 3) If no conflict => create booking
-    const bookingRef = push(ref(db, 'bookings/' + vehicleName));
-    const startTimeISO = new Date(startTS).toISOString();
-    const endTimeISO   = new Date(endTS).toISOString();
+    const bookingRef = push(ref(db, 'bookings/' + selectedVehicle));
+    const startTimeISO = new Date(${dateVal}T${startVal}).toISOString();
+    const endTimeISO = new Date(${dateVal}T${endVal}).toISOString();
 
     await set(bookingRef, {
-      userName: currentUser.email,
+      userName: currentUser.email, // store the booking's creator
       date: dateVal,
       startTime: startVal,
       endTime: endVal,
@@ -472,31 +470,19 @@
     calendar.refetchEvents();
   }
 
-  // NEW: sign out with block if vehicle is signed out by someone else
+  // handleSignOutVehicle
   async function handleSignOutVehicle(paramVehicle=null) {
-    const vehicleName = paramVehicle || vehicleSelect.value;
-    if(!vehicleName) {
+    const selectedVehicle = paramVehicle || vehicleSelect.value;
+    if(!selectedVehicle) {
       alert('No vehicle selected.');
       return;
     }
 
-    // if vehicle is already "signedOut" by someone else => block
-    const vehRef = ref(db, 'vehicles/' + vehicleName);
-    const vehSnap = await get(vehRef);
-    if(vehSnap.exists()) {
-      const vData = vehSnap.val();
-      if(vData.status === 'signedOut' && vData.CurrentlySignedOutBy !== currentUser.email) {
-        alert(`Vehicle is already signed out by ${vData.CurrentlySignedOutBy}. You can't sign it out now!`);
-        return;
-      }
-    }
-
-    // also do the active booking check
     const now = Date.now();
-    const bookingSnap = await get(ref(db, 'bookings/' + vehicleName));
+    const bookingSnap = await get(ref(db, 'bookings/' + selectedVehicle));
     if(!bookingSnap.exists()) {
       // No bookings => sign out
-      await signOutVehicleInDB(vehicleName);
+      await signOutVehicleInDB(selectedVehicle);
       return;
     }
 
@@ -507,7 +493,7 @@
     for(const bId in allBookings) {
       const b = allBookings[bId];
       const startTS = toTimestamp(b.date, b.startTime);
-      const endTS   = toTimestamp(b.date, b.endTime);
+      const endTS = toTimestamp(b.date, b.endTime);
 
       if(now >= startTS && now < endTS) {
         activeBookingFound = true;
@@ -520,23 +506,24 @@
 
     if(activeBookingFound) {
       if(belongsToCurrentUser) {
-        await signOutVehicleInDB(vehicleName);
+        await signOutVehicleInDB(selectedVehicle);
       } else {
         alert('Vehicle is currently booked by someone else at this time!');
       }
     } else {
-      await signOutVehicleInDB(vehicleName);
+      await signOutVehicleInDB(selectedVehicle);
     }
   }
 
+  // handleReturnVehicle
   async function handleReturnVehicle(paramVehicle=null) {
-    const vehicleName = paramVehicle || vehicleSelect.value;
-    if(!vehicleName) {
+    const selectedVehicle = paramVehicle || vehicleSelect.value;
+    if(!selectedVehicle) {
       alert('No vehicle selected.');
       return;
     }
 
-    const vehicleRef = ref(db, 'vehicles/' + vehicleName);
+    const vehicleRef = ref(db, 'vehicles/' + selectedVehicle);
     const vehicleSnap = await get(vehicleRef);
     if(!vehicleSnap.exists()) {
       alert('Vehicle data not found.');
@@ -555,35 +542,37 @@
     });
     alert('Vehicle returned successfully!');
 
-    const logsRef = push(ref(db, `vehicleLogs/${vehicleName}`));
+    const logsRef = push(ref(db, vehicleLogs/${selectedVehicle}));
     await set(logsRef, {
       userEmail: currentUser.email,
       action: 'signedIn',
       timestamp: Date.now()
     });
 
-    await updateVehicleHeading(vehicleName);
+    await updateVehicleHeading(selectedVehicle);
   }
 
+  // NFC flow
   async function handleNfcFlow(nfcVeh) {
-    alert(`NFC tap detected for ${nfcVeh}. Checking vehicle status...`);
+    alert(NFC tap detected for ${nfcVeh}. Checking vehicle status...);
     const vehicleRef = ref(db, 'vehicles/' + nfcVeh);
     const vehicleSnap = await get(vehicleRef);
     if(vehicleSnap.exists()) {
       const vehData = vehicleSnap.val();
       if(vehData.status === 'signedOut' && vehData.CurrentlySignedOutBy === currentUser.email) {
-        alert(`You're returning ${nfcVeh} via NFC tap.`);
+        alert(You're returning ${nfcVeh} via NFC tap.);
         await handleReturnVehicle(nfcVeh);
       } else {
-        alert(`Attempting to sign out ${nfcVeh} via NFC tap.`);
+        alert(Attempting to sign out ${nfcVeh} via NFC tap.);
         await handleSignOutVehicle(nfcVeh);
       }
     } else {
-      alert(`${nfcVeh} not found in the DB. Signing out anyway?`);
+      alert(${nfcVeh} not found in the DB. Signing out anyway?);
       await signOutVehicleInDB(nfcVeh);
     }
   }
 
+  // Actually sign out in DB
   async function signOutVehicleInDB(vehicleName) {
     await update(ref(db, 'vehicles/' + vehicleName), {
       status: 'signedOut',
@@ -591,7 +580,7 @@
     });
     alert('Vehicle signed out successfully!');
 
-    const logRef = push(ref(db, `vehicleLogs/${vehicleName}`));
+    const logRef = push(ref(db, vehicleLogs/${vehicleName}));
     await set(logRef, {
       userEmail: currentUser.email,
       action: 'signedOut',
